# discourse-discord-bridge

./: Cargo.toml  Dockerfile  config.example.toml  docker-compose.example.yml
src/: main.rs
