[package]
name = "discourse-discord-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache"] }
toml = "0.8"
sha1 = "0.10"
